fix errors on data validation process and register neighbor prefix to be reachable (to download certificate)

--- a/config/validation.conf
+++ b/config/validation.conf
@@ -5,7 +5,10 @@ rule
   filter
   {
     type name
-    regex ^<ndvr><dvinfo><><%C1.Router><>$
+    ; DvInfo messages are formatted as:
+    ;  /ndvr/dvinfo/<networkName>/%C1.Router/<routerName>/<version>
+    ; Example: /ndvr/dvinfo/ndn/%C1.Router/Router2/%FE%09
+    regex ^<ndvr><dvinfo><><%C1.Router><><>$
   }
   checker
   {
@@ -19,7 +22,7 @@ rule
         k-regex ^([^<KEY>]*)<KEY><>$
         k-expand \\1
         h-relation equal
-        p-regex ^<ndvr><dvinfo>(<><%C1.Router><>)$
+        p-regex ^<ndvr><dvinfo>(<><%C1.Router><>)<>$
         p-expand \\1
       }
     }
@@ -33,6 +36,9 @@ rule
   filter
   {
     type name
+    ; Router Certificate is formatted as:
+    ;  /<networkName>/%C1.Router/<routerName>/KEY/<label>/<issuer-id>/<version>
+    ; Example: /ndn/%C1.Router/Router2/KEY/9%7B%E7%8B%C4g%AAw/NA/%FD%00
     regex ^<><%C1.Router><><KEY><><><>$
   }
   checker
@@ -57,6 +63,6 @@ rule
 trust-anchor
 {
   type file
-  file-name "config/trust.cert"
+  file-name "./trust.cert"
 }
 
