changing the prefix name to use localhop scope

--- a/config/validation.conf
+++ b/config/validation.conf
@@ -6,9 +6,9 @@ rule
   {
     type name
     ; DvInfo messages are formatted as:
-    ;  /ndvr/dvinfo/<networkName>/%C1.Router/<routerName>/<version>
-    ; Example: /ndvr/dvinfo/ndn/%C1.Router/Router2/%FE%09
-    regex ^<ndvr><dvinfo><><%C1.Router><><>$
+    ;  /localhop/ndvr/dvinfo/<networkName>/%C1.Router/<routerName>/<version>
+    ; Example: /localhop/ndvr/dvinfo/ndn/%C1.Router/Router2/%FE%09
+    regex ^<localhop><ndvr><dvinfo><><%C1.Router><><>$
   }
   checker
   {
@@ -22,7 +22,7 @@ rule
         k-regex ^([^<KEY>]*)<KEY><>$
         k-expand \\1
         h-relation equal
-        p-regex ^<ndvr><dvinfo>(<><%C1.Router><>)<>$
+        p-regex ^<localhop><ndvr><dvinfo>(<><%C1.Router><>)<>$
         p-expand \\1
       }
     }
