--- a/config/validation.conf
+++ b/config/validation.conf
@@ -1,6 +1,6 @@
 rule
 {
-  id "DvInfo Messages should be signed by Router's key"
+  id "DvInfo Messages should be signed by Router's key (KSK or DSK)"
   for data
   filter
   {
@@ -23,6 +23,37 @@ rule
         k-expand \\1
         h-relation equal
         p-regex ^<localhop><ndvr><dvinfo>(<><%C1.Router><>)<>$
+        p-expand \\1
+      }
+    }
+  }
+}
+
+rule
+{
+  id "Router's certificate DSK should be signed by KSK"
+  for data
+  filter
+  {
+    type name
+    ; Example:
+    ;  - pkt=/ndn/%C1.Router/Router2/KEY/9%7B%E7%8B%C4g%AAw/DSK/%FD%00
+    ;  - key=/ndn/%C1.Router/Router0/KEY/%2B%0E%AA%F8%8F%83%84%9C
+    regex ^<><%C1.Router><><KEY><><DSK><>$
+  }
+  checker
+  {
+    type customized
+    sig-type rsa-sha256
+    key-locator
+    {
+      type name
+      hyper-relation
+      {
+        k-regex ^([^<KEY>]*)<KEY><>$
+        k-expand \\1
+        h-relation equal
+        p-regex ^(<><%C1.Router><>)<KEY><><DSK><>$
         p-expand \\1
       }
     }
