--- a/minindn/topologies/linear-3.conf
+++ b/minindn/topologies/linear-3.conf
@@ -1,7 +1,7 @@
 [nodes]
-a: _ radius=0.5 angle=2.64159265359
-b: _ radius=0.6 angle=3.64159265359
-c: _ radius=1 angle=1.57079632679
+a: _ radius=0.5 angle=2.64159265359 ndvr-prefixes=/ndn/a,/ufba
+b: _ radius=0.6 angle=3.64159265359 ndvr-prefixes=/bahia
+c: _ radius=1 angle=1.57079632679 ndvr-prefixes=/edu/ufba/dcc
 [links]
-a:b delay=0ms
-a:c delay=0ms
+a:b delay=5ms
+a:c delay=10ms
