--- a/config/validation.conf
+++ b/config/validation.conf
@@ -13,7 +13,7 @@ rule
   checker
   {
     type customized
-    sig-type rsa-sha256
+    sig-type ecdsa-sha256
     key-locator
     {
       type name
@@ -44,7 +44,7 @@ rule
   checker
   {
     type customized
-    sig-type rsa-sha256
+    sig-type ecdsa-sha256
     key-locator
     {
       type name
